modules/com.restlet/tech-doc/restlet-framework/guide/2.2/04_extensions/01_editions-matrix.md
Editions matrix
===============

Introduction
============

This table presents the list of extensions provided by the [various
editions of the Restlet Framework](../editions "Part III - Restlet Editions").

The core module including both the Restlet API and the Restlet Engine is
shipped by all editions.

Extensions availability
=======================

Extensions|[Android](../editions/android "Android")|[GAE](../editions/gae "GAE")|[GWT](../editions/gwt "GWT")|[JEE](../editions/jee "JEE")|[JSE](../editions/jse "JSE")|[OSGi](../editions/osgi "OSGi")|Description
--------- |  ------------------------------------------------------------------------------- | ------------------------------------------------------------------------------- | ------------------------------------------------------------------------------- | ------------------------------------------------------------------------------- | ------------------------------------------------------------------------------- | ------------------------------------------------------------------------------- | -
[org.restlet.ext.atom](./atom "atom")|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Support for the Atom syndication and the AtomPub (Atom Publication Protocol) standards in their 1.0 version.
[org.restlet.ext.crypto](./crypto "crypto")|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Support for cryptography.
[org.restlet.ext.e4](./e4 "e4")|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Support for the WADL specification.
[org.restlet.ext.emf](./emf "emf")|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with Eclipse Modeling Framework.
[org.restlet.ext.fileupload](./fileupload "fileupload")|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with Apache FileUpload.
[org.restlet.ext.freemarker](./freemarker "freemarker")|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with FreeMarker.
[org.restlet.ext.gae](./gae "gae")|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|&nbsp;|&nbsp;|&nbsp;|Integration to the Google App Engine UserService for the GAE edition.
[org.restlet.ext.gson](./gson "gson")|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Support for GSON representations.
[org.restlet.ext.guice](./guice "guice")|&nbsp;|&nbsp;|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with Google Guice.
[org.restlet.ext.gwt](./gwt "gwt")|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Server-side integration with GWT.
[org.restlet.ext.html](./html "html")|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Support for the HTML (HyperText Markup Language) standard in its 4.0 version and above.
[org.restlet.ext.httpclient](./httpclient "httpclient")|![](/images/icons/8/puce.png)|&nbsp;|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with Apache Commons HTTP Client.
[org.restlet.ext.jaas](./jaas "jaas")|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Support for JAAS based security.
[org.restlet.ext.jackson](./jackson "jackson")|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with Jackson.
[org.restlet.ext.javamail](./javamail "javamail")|&nbsp;|&nbsp;|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with JavaMail.
[org.restlet.ext.jaxb](./jaxb "jaxb")|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with Java XML Binding.
[org.restlet.ext.jaxrs](./jaxrs "jaxrs")|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Implementation of JAX-RS (JSR-311)
[org.restlet.ext.jdbc](./jdbc "jdbc")|&nbsp;|&nbsp;|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with Java DataBase Connectivity (JDBC).
[org.restlet.ext.jetty](./jetty "jetty")|&nbsp;|&nbsp;|&nbsp;|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with Jetty.
[org.restlet.ext.jibx](./jibx "jibx")|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with JiBX.
[org.restlet.ext.json](./json "json")|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Support for JSON representations.
[org.restlet.ext.jsslutils](./jsslutils "jsslutils")|![](/images/icons/8/puce.png)|&nbsp;|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Utilities to provide additional SSL support.
[org.restlet.ext.lucene](./lucene "lucene")|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with Apache Lucene, Solr and Tika sub-projects.
[org.restlet.ext.nio](./nio "nio")|![](/images/icons/8/puce.png)|&nbsp;|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with java.nio package.
[org.restlet.ext.oauth](./oauth "oauth")|&nbsp;|&nbsp;|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Support for OAuth HTTP authentication.
[org.restlet.ext.odata](./odata "odata")|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with OData services.
[org.restlet.ext.openid](./openid "openid")|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Support for OpenID authentication.
[org.restlet.ext.osgi](./osgi "osgi")|&nbsp;|&nbsp;|&nbsp;|&nbsp;|&nbsp;|![](/images/icons/8/puce.png)|Support for the OSGi specification.
[org.restlet.ext.rdf](./rdf "rdf")|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Support for the RDF parsing and generation.
[org.restlet.ext.rome](./rome "rome")|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Support for syndicated representations via the ROME library.
[org.restlet.ext.sdc](./sdc "sdc")|&nbsp;|&nbsp;|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with Google Secure Data Connector on the cloud side.
[org.restlet.ext.servlet](./servlet "servlet")|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|Integration with Servlet API.
[org.restlet.ext.simple](./simple "simple")|&nbsp;|&nbsp;|&nbsp;|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with Simple framework.
[org.restlet.ext.sip](./sip "sip")|![](/images/icons/8/puce.png)|&nbsp;|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Support for Session Initiation Protocol (SIP).
[org.restlet.ext.slf4j](./slf4j "slf4j")|&nbsp;|&nbsp;|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Support for the SLF4J logging bridge.
[org.restlet.ext.spring](./spring "spring")|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with Spring Framework.
[org.restlet.ext.swagger](./swagger "swagger")|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with Simple framework.
[org.restlet.ext.thymeleaf](./thymeleaf "thymeleaf")|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with Thymeleaf.
[org.restlet.ext.velocity](./velocity "velocity")|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with Apache Velocity.
[org.restlet.ext.wadl](./wadl "wadl")|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Support for the WADL specification.
[org.restlet.ext.xdb](./xdb "xdb")|&nbsp;|&nbsp;|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|Integration within OracleJVM via the Oracle XML DB feature.
[org.restlet.ext.xml](./xml "xml")|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Support for the XML documents.
[org.restlet.ext.xstream](./xstream "xstream")|&nbsp;|![](/images/icons/8/puce.png)|&nbsp;|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|![](/images/icons/8/puce.png)|Integration with XStream.